Fix label separation in the runner.